welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: Missing closing brace `}' assumed here
def fleur(c:Color){setCouleurBrosse(c);baisseBrosse();avance();avance();recule();gauche();avance();recule();recule();avance();setCouleurBrosse(Color.YELLOW);droite();leveBrosse();recule()}
^FlowerCase:1: error: expected class or object definition
def fleur(c:Color){setCouleurBrosse(c);baisseBrosse();avance();avance();recule();gauche();avance();recule();recule();avance();setCouleurBrosse(Color.YELLOW);droite();leveBrosse();recule()}
^FlowerCase:3: error: expected class or object definition
def growFlowers(){fleur(Color.RED);avance();avance();avance();avance();fleur(Color.CYAN);recule();recule();recule();recule();droite();avance();avance();avance();avance();gauche();fleur(Color.PINK);avance();avance();avance();avance();fleur(Color.GREEN);recule();recule();recule();recule()}
^FlowerCase:5: error: expected class or object definition
def jardiniere(){growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE) 
^